<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="@dimen/margin_padding_size_small_middle">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/male_item"
        style="@style/MainText.H7_1.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_padding_size_small_middle"
        android:text="@string/gender_male" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/female_item"
        style="@style/MainText.H7_1.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_padding_size_small_middle"
        android:text="@string/gender_female" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/other_item"
        style="@style/MainText.H7_1.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_padding_size_small_middle"
        android:text="@string/gender_other" />

</androidx.appcompat.widget.LinearLayoutCompat>