<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpdateFragment"
    android:background="@color/main">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/container_60"
        android:layout_height="@dimen/container_60"
        android:src="@drawable/ic_vector_logo"
        android:layout_marginTop="@dimen/container_120"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/upload_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_large_small_mid_mid"
            style="@style/MainText.H8_3.Regular_upload"
            android:text="@string/update_time_title"
            android:layout_gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/upload_title_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/margin_padding_size_large"
            android:layout_marginTop="@dimen/margin_padding_size_large_pre_small_mid"
            style="@style/MainText.H8_3.Regular_upload_desc"
            android:text="@string/update_required_time_description"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <com.vylo.common.widget.MainButton
        android:id="@+id/update_button"
        android:layout_width="@dimen/rounded_corner_button_big_width"
        android:layout_height="@dimen/rounded_corner_button_big_height"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_padding_size_xxxlarge_small_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_not_now"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_not_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/container_80"
        style="@style/MainText.H8_3.Regular_button"
        android:text="@string/label_not_now"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>